--- a/AcousticFWI/Visco-Acoustic-wave-equation.ipynb
+++ b/AcousticFWI/Visco-Acoustic-wave-equation.ipynb
@@ -126,41 +126,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'rg' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-4e8ab8ffaf38>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# the recomputation of the gradient at every time step.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mgradgrad\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mdx\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mrg\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mdy\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mexpand\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgradgrad\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'rg' is not defined"
-     ]
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAqgAAAAqBAMAAACNcbSVAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAEM3dMma774lUqyKZ\ndkSYuAQLAAAJN0lEQVRoBbWafYhcVxXAz5ud79mdfUTUshp23BZBre5SQVNLySCI/qFktVrxi8wf\n2mJC2WkVLEiascFaJGlGqvQPlUxa0WIpGdC2tBY7hhK0rTj9R0PMmkERihJmNo3ZZpNmPPfj3I/3\nMdPZd+f98e45557zu+ec9+a9l7sB0EdmbbPhLV9qaosz6fbhvbBj+E1nPPB+NXwC4JHNrjskkRYO\nbrWhcPAA6QnH4mWAL/sJIdHhJ5qQOR49tT1r+gLGpaZxA8CeCqLft720wlGYaKkTNruwYKLPu+Bo\nxu42wENadSjNXAHI95wBl9vPOWPZoNSVUsu2JNXONSAzlRsV5t4A+FLS9HT8sT+0tOJUKlxdcMoD\nWKzDecdIifM2odx1h85t+e5gNumg0ycqsrPX0g17CWfaWu9Tzlj4JHnTIcxGHXV47Tm5sPVuewV3\n2rHjHXcwKG46hNmoE3VbT64dbCVnRBNyW9H27Vlfxi+f6Ryzz+Hnmttjre2Wp2lZfP07O2are2rO\nYDboxfQl25Bcuyc5IoaQq8RMbMf8ELBPtGkc+NnHvitdHiX88JnS8ULDHXiuB5mr7nAm6R8Aezum\nIbmcuZacEUPY24uZ2Ib5cYwZ+tsIHBtSbADMb4x1m8ghO5jIfRLntUmcR/qmlzd78M/hxwyn9Kqh\nvFUxUw15fnx4H5SXX28ZE58w5LFiBBJm17a6duBESAr9PAnGeGr4pKGhOFEfopI1cU+bipLf8S0l\nRgq/iLTaxlLN1L07V0w1LE+IHMvTKxSrWo6VsA8TIMck+57oZW6MNnPr29qQGjFNUymfJD6mOpZq\nK9tAjuRpuncLQEWrsRLrw1tEjk12rhG9jPri9Nohh2MAKuxdoVllOK0kLsw3SR+DJLeI0USO5OnY\nwgCAwiIWJkdekEaOKAvArJ/irTEX7hmbL6s3TqFr+TPlJP5S6tL689CsMnxXSVzo+6SPQZJbxGgi\nR/J07GwF4J1SjViYHHkfNHJEWXb9FG+N/7I0peRXSIxIZBfO0f5u/OplhRCoQ0SEMUjlFxIs5Eie\nDp1p6H3uiIXJkfdBI+PLwgCzfoqXY/mB364fh8OoeetPnD9iz6b+9LX9wkKJXPdnKN3NTOVfXsIX\nJ4tjR+Tqr+3/zBk/38HpnWd+f7rL/ABu/Mlf20KSSO9wF57xmclGCqfAWSNpIsQz6tDo/6zt6wJP\nBeOoFkLwUffBSJHK0vnH1G+hcLeqeDM8AN9A63VwW/cme3bxA/BrYaFEGo/A3ICb2FMKPif9aXWp\niqHxWDNfy67i5Wpkbp2pcKN3oV1siWmJzBfqcE5aTKQwBc4KSfYwz6jDQOMDEDIVEUW1EIOPug8G\nUpZl5B9Tv4UCeDbVgr1wM1q/B0f9n9qzx6pwh7DIRErNk5CtcRN7SsHDXIy+U0vN90NmMNPEC+fn\nNwpt7lq4SPF0wzyLILmIhZRka9BIMod5Rh0GGl8AUFgRUZFN1X0wkLKpOv9w/Ts+zI4bYH6oD/Dx\nXXfUvw+X8+G9MlXveuZ4U5W9iw5YiXioz3e5iT2lYI+YVT9/E+3BZchv5Hp4p0KqJh2xbzkRT031\nUX9TzGokpYp2netwoJHkEOYZdRho9gBMD8Qy1FQzWaMPBlI2VecfV78A63PfhzuBNRWoNj23C0oX\nUcsvLV1/z9JSB0X8HthTxRH/xtHDE2/q/UtLH11aCn/Som+2nmNudCEAsG8vVNFgIPt+mi2Ch0YK\nPXw2kGIygmfUodAe2z3gTTUWtvGqD4Q0y5I3UnT9Nodrh8C7yn/+gLV5lgOmkq8LE11dvIx/Ez59\n5szflqjLS2pFA347LHbYzx+bX8UbiB3Ytx9IkZAnYa7O58BCClPgbCDFTATPqEOhywNctLwiYmhh\nm636YCBVWSr/mPptFL6OIXM3f1H9CN9Ar1qzmQHkGp/lJkok24J9wud++PGYFxX+y+SLPntRFfxz\nMCeauhfg3owQCbkPEMoPCylMgbNCkj2CZ9Sh0PlKoTr6RaX7YCBlU438Y+qndGi8BJ+swg/xxr6c\nHZRWYbFCEwDFCsz3GlynDszWyv8Dj/3vhpe8LsAr0lldUqnzYb6W/jbkWwD95ho8JaIeBbiWF06E\nPAV9uayFNElKVkiyhHlmHQo929oJMNsRUbQwMcRIfQADKcsy8o+p30ZB+dqRl/nP2Hvy1dNfwIfe\nhnbAuyz/R6FSIt7jZ68A7MZ77el1nPmQdI5sav+1s23+m1tY3/n9VRGF326HGzZy4chf2mJZCynJ\n9qCQZA7zzDoUunQX3gGpnoiiWojBR9UH9qulFGVZRv4x9SOi9ModVdqMwacUHjNtTman/yrJFHQi\n+FSBsnQv1aWPaqqJPsQnb1EYipIGjcSPDLWsQqqw5099HUDulwWRygkFzeNWUYeJfkZ6K0cz2VAf\nmLMqi0eK/CPrx/kFyOPbEJ9PeIhzhstMh1V+Dp7K0vwof0Vn5HS+K4V/k7+JFt8DX6UpoChpkMhi\nhb+aaVmFpDCvBUd77NHPjiCSG+WJUpQqAgPoI0FHM9lQH5izKotHsvxj6seZ4wDfwc+cJnNd5GfY\nz2R2eFSdUIPnW+EuNL1dmncEp020J7a4sm1yoijSxTjTzXaNZUPIog+5OuA3Lx4hpI0yNVaHjfYq\n5jyTR/Uh6Is6yz++ftx6PlGFvo9Ohd0f5OFqkzpwO/FJ43T+bBU1TJgf6lJIHcBAP3yhy8ylGk1S\nFOliLK+/iIJaNoTMrUDxotwvCyFtlKkxoI3WV5f8jGRDfSAfY2T5x9e/7LOmiueTDML3/uRHph2K\niUA/FXIaYQgjUxusqeKRR4ETISnoKySoMSLZifoQTBbf33p/R63iRHCPxi8SvV/mJEcFcZls+Q38\nbFT7RWoJF8IU0P0G6P0yFzkqhtNkZ2pgbMaoNVwIU0B/BP92ofbLXOSoGE6TPYX/vtD7RWoNF4J7\n9GyN/+3igIvsAgyXyc619H5RYJmk6hTQZzAnuV+WNLtAvNNkfwaltrEZE1gqkeoeXejA74z9skTZ\nBYJdJpvuwFzb2IwJLJVEnQL60wB/N/bLkmQXiHWa7G8ePPyYuRkTWCuJ6h5d2vXgSytFvV+WJLtA\nrNNkl4fD183NmMBaSVT36BT+PWXF2C9Lkl0g1kGy/wfvYga/+1/RrAAAAABJRU5ErkJggg==\n",
+      "text/latex": [
+       "$$- \\frac{X}{2 h} p{\\left (x,- h + y,t \\right )} + \\frac{X}{2 h} p{\\left (x,h + y,t \\right )} - \\frac{Y}{2 h} p{\\left (- h + x,y,t \\right )} + \\frac{Y}{2 h} p{\\left (h + x,y,t \\right )}$$"
+      ],
+      "text/plain": [
+       "  X⋅p(x, -h + y, t)   X⋅p(x, h + y, t)   Y⋅p(-h + x, y, t)   Y⋅p(h + x, y, t)\n",
+       "- ───────────────── + ──────────────── - ───────────────── + ────────────────\n",
+       "         2⋅h                2⋅h                 2⋅h                2⋅h       "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# In practice, compute rho. grad(rho) upfront (this is a constant) and just compute the following expression, it avoids \n",
-    "# the recomputation of the gradient at every time step.\n",
+    "# the recomputation of the gradient at every time step. int the following X and Y are the component of rho.grad(rho) in X and Y respectively\n",
     "\n",
-    "gradgrad=r*dx+rg*dy\n",
+    "gradgrad=Y*dx+X*dy\n",
     "expand(gradgrad)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAABY8AAAAqBAMAAAAJy7m/AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAEM3dMma774lUqyKZ\ndkSYuAQLAAAOTklEQVR4Ae2bf2xkVRXHz2s77UynnU4wIlklW4oxQdFtMFF+hNCYGP1DsytqjKLZ\nMRFI+JEWNNFoYEeISHQXakAJUbMFRAiE7CQqBDVuIWajC8bhHyHIZht/JERD2gVkYYGt5977zv3x\n7nk/59bY0PfHe/fX+dzvOee+6Xtv7wKYozZ/vBvteGXRtIQoBaVu23OiB40914UQZhjRfesPAtxx\nvG+aBiyNLFcGnFHZMsNwqJ3RWbprQyRCQOr4awBfCOqyiFFQ6s5pJJ4lsCGPkReRNhTwDh7uVJX3\n8LGqlhl2zfmQWd0QiRCSivlsLmfEo1pXUOrw6wD1lWpCMqwu6gHcktFftuvpTlmLePyphzdgIUdX\nHQi4kDdEIoSl7uj9umICssxCUidfBfh81mTV+o52oRbwB7l5caeaDoDJDVjIAEcDLuQNkhjU8f2P\nLVVNQIZdSGp0HFr9jLkqdm1fgBcqmnJm9aEO11ykLWg+9YRvtYU8diLknUthDEqdX/k4cQNeR0+O\ndAPiLtlayKWjGfQOrr9Zev4CBkGp++9aLjBl2SGNE+8qa5IxPupvLeSM8PBdQRfy+HF+ksFag1LH\nTgwmJsV6z1JKR5XmOmwt5NJxC7qQnzgQ8I1HuxKUOoqfLTbgmO8FhN6+tZDLRzPkQp6Y29kpryDP\nIix1bDpvvkr911ay4o2i7tZC5iOT1RpyId8C4jNt6CMs9WA3tD7Ba+JXvWBH44EHDnyz6qeVkPk0\nHr21vlpMrkDtDeN8oFJg6u6VQLocTO2kUx24MtapithayFUjZ+zux+J68O9vganzRm/A0uhaQBii\npjpVeVsLuWrkyG5kx/EV+Nv6+VTH68guq1K0WJuzRw5KdWkAh9YfsvEVNcJnXMjE/Im+2/JRt5pd\nS9DwH9HnT9ihS49j0j2YuO+le+3JSukgQ496eM/5th4oRU16l5SY7h3pYa6exCR1IInJCR9ONsj6\nqV9lm3Xjz3SJL7jUgLTo8ll+Rr91fM5vs1uaHQhIcz2254GcYKEO5siVVoqal4G8WFne5aEsX/Il\n5nppaHkSzzBD7dLZdiVRflsPhhJNyWqCGpA2tJyci61HFwBMsz26UWx7DEdLeKxnyQ9WyvbLTGml\nqVkZKBAr27sslHYboJjETC8NLV/iZNeMtku42VMdUY9K+roft710Ze2dus0tJKmaBr6FobkMU3No\nU4vUwSijLoDGGsAzsurPGI8S3aVpZga35Gi0u4x7aUKUTNtGljOlaWpqEBLUrAzkx8rxLgtleVFM\nYqaXhmYkmja3NOavUzGgpfdnNfquAdYeB4gWZOtPvT7VkKAaGvgWhpYCA4e22qZhjDLqApiYBniH\nrPozxqO+hdfStNjWuzga7V7jXpoQoYM5MqVpamoQXGpmBvJjZXuXibL8KCYx00tDMxJNm1v6u1ul\nWn2WSkykzsW+s2R/Wm4SVENjFrKh0ZTJq0O7UfcyynQfDHdpF32axpZwsTTNzOCWHI12l3EvRYjU\nYVvE5UxpmpoWhAQ1MwP5sbK9y0RZfhSTmOmloRmJpo1KrZt+eeQu2IvV6MiDL+yjZnUd+uOXrlQl\nitRpf4LmNaKp9fNXHgJpB8yyZKmGRhYsTU1onw1Nt579w7/0VIWUnf7s757py6Zobx8eaYviv+av\n6EN9WRSZ9fP8lZ98ti17fZoJBksTRPcwGo0Q1j1fiNFhTDXcl8ZRKQjaDEBTjSvgZ4D1zpdovKMZ\nfBQY9WUlgu+lUc1KJBnmWh8/D26CS7HhNPh0/xzTIUrb3wcPqBaKVPcOmFyTTeJ5BS6WRd9xlmpo\ntKxYmprQPhsatUYv9saXVCVWFnVrFw5Py6Z6YwGOqk58QoOabPU1QveexXpndBfewh7NCgZLU3T7\nrDVaQlj3fCFGh/GB0Iw0jkrpITO8aqqVVz8DrHe+RO2dnsBH5TieJZHx0qhmJWoduvDo0BLshvOw\n/m24tf1j3S4L++fgMtUSy2guPg6jHdkknlfgNln0HWephhYvZJ4mkc7J0Ki58TLJgFhZvV0/1ujJ\n/kdRWiwbn9CgMStafY3NxfdCbW14EUd4NCsYLE3O45y0RiOEd88TYnQYU432pbFUf5UYqpVXLwPA\neudJBO2dFuajjPrSEn0vMxNwygfF8W6YWjcHtPGF8db29SiwDe+JZUZnioHnzIn3uetUWxypCOtT\nfdkknldgpywqxw10fY2jWrR4WTE00gg8jbpxqY4pGbSQI7N7p41db0phIJ7QRtZE2dcYwWtQPza2\nIl8JEzQrGD6NRNgaTRyNEMY9TojRYUyB5uAcZVKg0mMlds1QTV79DIDvHSfR8s5fGvQbYdSzjmdJ\n9L3MTABKZI7VNlwOYiEDZd8MOheaL2OtPjNz5rUzM8tYxJfVnXN4xceOFTzhQr5hZubDMzPJr4oc\nNaZZFj5NkP3DoqlOvIsOzmHRUkY3GLautkeEbHxmEPsqcCHzGnH20YWxFRCvhB7NBMOjIZM5jMb4\nTi8cLK0DvwPGd6fmM9K8oNlB0IYiU8o7K69+BorGyngXz8CgjPqyEhkvLdUFE3AjRG/IRwvA7Ecm\nEFjCdVBfUE2NOMJ47zytxqyKweo9Vv3aOaYM1aLRTczSHI6qGFrciXfRd/GmFQcpEzeYasEfnskF\n2ddaw6bWrCgzGuuzsH1ZPFpwNBMMjibp7slo1EJY93whWgf+MGgfYjgjjaPqIBhNhqpdYTJQNFbG\nOzUDhzLqy0pkvLRWY8EEnA21a+TL3g/wLe4pEwgs1dZgrPsp2USRGl2CK9SYG+D29Jc9YKgWjZYV\nS3MkqIqmUd9ugG/U1LKNlTXaR2FStaBCBIujPt2YS3/Zw39O+lxbvOz5NLCCwdEknU57rxLzkkZL\nCOues5ClqdZhmRKbkcZRKT3SrH7oMbxqqnGFyUB+rFzvSBeDstSXlch4aVSzEkmHdX0FPjYH38O/\ng6+NrjV3wfZp0zc+DVMrXVmnSE10Wv/Bt3xsOxz1AZ6UnU5uZAswVItGC5mlKYBzJppuvBvgZF3V\nYmWri/PwK6UMDsHqLqlxYul0fAJeFgMZjVOdka9BfQnAp9nBEDQZFosmiHTUe+gZaI8tIax7thBl\nqnVYpgT3pYGkyjSZFFB6pNn3hUO4K095Z7nCZCA3VgnvSBeDstRzjmdIHDABSlPr5L4n5CNC9NBT\nz3wWnxePkVYA/LWq/0FVSUZ0/3OvA1yEP0EPH8GeD8heOzdqOEe1aLSsWJoi2GdN0434uXBvV9Vi\nZduOnP4d/HEVymDbvj/3ZKl5Nd5sQytioK8RVp9/ricfPHyaHQxJE2GxaIJIx3BvBEOiNVpCWPds\nIcpU67BMCe5LA0mVaTIpoPRIswtgZw9fFGLvLFeYDOTGKuEd6WJQlnrO8QyJ4oEgkU5LtZLIJqD5\n5GVztOULH6XwGEbP4+PfVHCuRgY+/0ArHt5ckIPi3Pz20FcA1K6oPKrOJkOL582i2dKMMtEaK3tc\nlwAekaN9jfG/511gw8wTt2pVwUAaUFgULbaRzo6tNPGdMumxEsK4FwuxTG+UNKODohtPQhfjqKCS\nHpWCuE/tIrseDq7Qv1YaKhnEOJ0B8SlDz+jEypKY9I40yatBiWqa4wUkCnPjpajFbqYlYBvUMfT4\nEIWHOtdkWdRhlzwnT624+W75taIWd9f7svBPeY6W4NYV8ayIRx5VWeCfFHzMhwRN2OOLZhZNDVFn\nUqZqgjU+ja8imgr7ZI+vUSmFLyrD+OzSRDAUTYdF0chGfaxp4M910mMhhHVPCYnjBMJUQYwOYcoc\nJE1RKU0qBdSnVMD+tk8lg5gcy8iIFSE47xx55JFqFOo5xwtIFAAapmA5CbgL4Ou05Wv7ojS5MjaE\nKOEwtcfXC+FqLL09rp1i9463YWwB8OMsHgWpFWn2rImyUDbcH+0bjdG0NcTWGKn9W6M9qz9RFMFQ\nNApLNO0MUYhhnC7psRCS4V4cJ6SDp4Oi68xkKpJKesBJAUwtynEX4g9BwjttYECilBErS6LnnQtx\nanmOp0t0MKqSkwDcLn9gTm35alz0fmmit0yn/BzQJC88N4dFzK889PIXtbFZGH9ZbZgrSq1IU5Oz\nZ6GsdeT3eCaNoz1roKURbnuxL3qaHas/URTBUDQKi0Oj3YF78S9iMo5i+gz3LFNPBylPiKGqpJIe\ncFIQb+MT+0eSVG1AGHXNiJUl0fPOhTi1PMdX22I4J9HBqEpOAna0xUJWj2axdTMneswk+Ne7ZzcP\nHRMLWT1NVaGGpWlll+gSFhiN+K2jxOHQYmet5zJIj6PrHmNaSgdJTlBVTs1TCvyvvCM9zHUjJcq3\ne7PjiJm9WhO+Wlq7oqoxjFVYGnFDUpWzz8M/CF78OoBpxiQyp61uay5jTOGuTSARWq/aW74Ku5Y3\ncLVrbZjLG5zbH5ZG04Wkyi1gI2fd+WWCF78OYJo+idpF9pE7fyT/fKePK9azCSTCcMfe8lXMrwKj\nPgSwX2+YKzA+e0hYGs0VkiqdHVtfXyN48esApumTqF1ke9bX04eU6NkEEvHfc8T/AqItXyWcyxw6\n0ZH/Aeq6zEGFO8PSaNqgVPy+WdXZAUzJFf8aNqebQOLkEn54ibd8+eGo3PIsWtKuqMoQbRiWRtig\n1AGcHcCUXPGvYXO6CST+BJo9a8eRH5FKLY1l+I29K6oSRBuFpRE2KHUAZwcwJVeYa9CcbgKJI8sw\n2bN2HDEhqdL0CYC/1syGuSoIyyYsjcBBqQM4O4ApucJcg+Z0E0j8xc1777F3HDEhqdDUPPfmw7Pj\nZsNcBYRlEpZG4LDUAZwdwJR8Ya53m02BTG/Jpk0gccf6+kv2jqOSHqYMH8L/nTRr74pKGVesOSyN\n5gxLHcDZAUzJF+Z6qdlFxvSWbPq/lfhfxXttPzy0UAEAAAAASUVORK5CYII=\n",
+      "text/latex": [
+       "$$- \\frac{X}{2 h} p{\\left (x,- h + y,t \\right )} + \\frac{X}{2 h} p{\\left (x,h + y,t \\right )} - \\frac{Y}{2 h} p{\\left (- h + x,y,t \\right )} + \\frac{Y}{2 h} p{\\left (h + x,y,t \\right )} - \\frac{4}{h^{2}} p{\\left (x,y,t \\right )} + \\frac{1}{h^{2}} p{\\left (x,- h + y,t \\right )} + \\frac{1}{h^{2}} p{\\left (x,h + y,t \\right )} + \\frac{1}{h^{2}} p{\\left (- h + x,y,t \\right )} + \\frac{1}{h^{2}} p{\\left (h + x,y,t \\right )}$$"
+      ],
+      "text/plain": [
+       "  X⋅p(x, -h + y, t)   X⋅p(x, h + y, t)   Y⋅p(-h + x, y, t)   Y⋅p(h + x, y, t) \n",
+       "- ───────────────── + ──────────────── - ───────────────── + ──────────────── \n",
+       "         2⋅h                2⋅h                 2⋅h                2⋅h        \n",
+       "                                                                              \n",
+       "\n",
+       "  4⋅p(x, y, t)   p(x, -h + y, t)   p(x, h + y, t)   p(-h + x, y, t)   p(h + x,\n",
+       "- ──────────── + ─────────────── + ────────────── + ─────────────── + ────────\n",
+       "        2                2                2                 2                2\n",
+       "       h                h                h                 h                h \n",
+       "\n",
+       " y, t)\n",
+       "──────\n",
+       "      \n",
+       "      "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lap=(dxx+dyy)\n",
-    "lap"
+    "expand(lap + gradgrad)"
    ]
   },
   {
