--- a/AcousticFWI/TTI.ipynb
+++ b/AcousticFWI/TTI.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "\\begin{cases} \n",
     " &m \\frac{d^2 p(x,t)}{dt^2} - (1+2\\epsilon)G_{\\bar{x}\\bar{x}} p(x,t) - \\sqrt{(1+2\\delta)}G_{\\bar{z}\\bar{z}} r(x,t) =q  \\\\\n",
-    " &m \\frac{d^2 r(x,t)}{dt^2} -  \\sqrt{(1+2\\delta)}(G_{\\bar{x}\\bar{x}}) p(x,t) - G_{\\bar{z}\\bar{z}} r(x,t) =q    \\\\\n",
+    " &m \\frac{d^2 r(x,t)}{dt^2} -  \\sqrt{(1+2\\delta)}G_{\\bar{x}\\bar{x}} p(x,t) - G_{\\bar{z}\\bar{z}} r(x,t) =q    \\\\\n",
     " &u(.,0) = 0 \\\\\n",
     " &\\frac{d u(x,t)}{dt}|_{t=0} = 0 \n",
     "\\end{cases}\n",
@@ -92,8 +92,8 @@
     "## Adjoint\n",
     "\n",
     "\\begin{cases} \n",
-    " &m \\frac{d^2 p(x,t)}{dt^2} - (G_{\\bar{x}\\bar{x}})^T((1+2\\epsilon) p(x,t)) - G_{\\bar{z}\\bar{z}}^T(\\sqrt{(1+2\\delta)} r(x,t)) =q  \\\\\n",
-    " &m \\frac{d^2 r(x,t)}{dt^2} -  (G_{\\bar{x}\\bar{x}})^T(\\sqrt{(1+2\\delta)} p(x,t)) - G_{\\bar{z}\\bar{z}}^T r(x,t) =q    \\\\\n",
+    " &m \\frac{d^2 p(x,t)}{dt^2} - G_{\\bar{x}\\bar{x}}^T((1+2\\epsilon) p(x,t)) - G_{\\bar{z}\\bar{z}}^T(\\sqrt{(1+2\\delta)} r(x,t)) =q  \\\\\n",
+    " &m \\frac{d^2 r(x,t)}{dt^2} -  G_{\\bar{x}\\bar{x}}^T(\\sqrt{(1+2\\delta)} p(x,t)) - G_{\\bar{z}\\bar{z}}^T r(x,t) =q    \\\\\n",
     " &u(.,T) = 0 \\\\\n",
     " &\\frac{d u(x,t)}{dt}|_{t=T} = 0 \n",
     "\\end{cases}\n",
@@ -103,8 +103,8 @@
     "\n",
     "where\n",
     "\\begin{cases} \n",
-    "G_{\\bar{x}\\bar{x}} & = cos(\\phi)^2 \\frac{d^2}{dx^2} + sin(\\theta)^2 \\frac{d^2}{dz^2} -cos(\\phi) sin(2\\theta) \\frac{d^2}{dx dz} \\\\\n",
-    "G_{\\bar{z}\\bar{z}} & = cos(\\phi)^2 sin(\\theta)^2 \\frac{d^2}{dx^2} + cos(\\theta)^2 \\frac{d^2}{dz^2} +cos(\\phi) sin(2\\theta) \\frac{d^2}{dx dz} \\\\ \n",
+    "G_{\\bar{x}\\bar{x}} & = cos(\\theta)^2 \\frac{d^2}{dx^2} + sin(\\theta)^2 \\frac{d^2}{dz^2} - sin(2\\theta) \\frac{d^2}{dx dz} \\\\\n",
+    "G_{\\bar{z}\\bar{z}} & =  sin(\\theta)^2 \\frac{d^2}{dx^2} + cos(\\theta)^2 \\frac{d^2}{dz^2} +sin(2\\theta) \\frac{d^2}{dx dz} \\\\ \n",
     "\\end{cases}"
    ]
   },
