--- a/AcousticFWI/VTI.ipynb
+++ b/AcousticFWI/VTI.ipynb
@@ -21,8 +21,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PDE \n",
+    "# PDE \n",
     "The VTI wave equation for the square slowness m, thomsen parametersd $\\epsilon$ and $\\delta$ for 3D  and a source q is given in 3D by :\n",
+    "\n",
+    "# Forward\n",
     "\n",
     "\\begin{cases} \n",
     " &m \\frac{d^2 p(x,t)}{dt^2} - (1+2\\epsilon)(\\frac{d^2 p(x,t)}{dx^2}+ \\frac{d^2 p(x,t)}{dy^2}) - \\sqrt{(1+2\\delta)} \\frac{d^2 r(x,t)}{dz^2} =q  \\\\\n",
@@ -33,27 +35,90 @@
     "\n",
     "with the zero initial conditons to guaranty unicity of the solution\n",
     "\n",
+    "It correspondto a velocity model where the velocity in the z direction is different from the velocity in the xy plane\n",
+    "\n",
+    "##  Adjoint\n",
+    "The VTI adjoint wave equation for the square slowness m, thomsen parametersd $\\epsilon$ and $\\delta$ for 3D  and a source q is given in 3D by :\n",
+    "\n",
+    "\\begin{cases} \n",
+    " &m \\frac{d^2 p(x,t)}{dt^2} - (\\frac{d^2 ((1+2\\epsilon)p(x,t))}{dx^2}+ \\frac{d^2 ((1+2\\epsilon)p(x,t))}{dy^2}) -  \\frac{d^2 \\sqrt{(1+2\\delta)} r(x,t)}{dz^2} =q  \\\\\n",
+    " &m \\frac{d^2 r(x,t)}{dt^2} - (\\frac{d^2 \\sqrt{(1+2\\delta)}p(x,t)}{dx^2}+ \\frac{d^2 \\sqrt{(1+2\\delta)}p(x,t)}{dy^2}) - \\frac{d^2 r(x,t)}{dz^2} =q  \\\\\n",
+    " &u(.,T) = 0 \\\\\n",
+    " &\\frac{d u(x,t)}{dt}|_{t=T} = 0 \n",
+    "\\end{cases}\n",
+    "\n",
+    "with the zero initial conditons to guaranty unicity of the solution\n",
+    "\n",
+    "It correspondto a velocity model where the velocity in the z direction is different from the velocity in the xy plane"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PDE 2D\n",
+    "The VTI wave equation for the square slowness m, thomsen parametersd $\\epsilon$ and $\\delta$ for 3D  and a source q is given in 3D by :\n",
+    "\n",
+    "# Forward\n",
+    "\n",
+    "\\begin{cases} \n",
+    " &m \\frac{d^2 p(x,t)}{dt^2} - (1+2\\epsilon)\\frac{d^2 p(x,t)}{dx^2}- \\sqrt{(1+2\\delta)} \\frac{d^2 r(x,t)}{dz^2} =q  \\\\\n",
+    " &m \\frac{d^2 r(x,t)}{dt^2} - \\sqrt{(1+2\\delta)}\\frac{d^2 p(x,t)}{dx^2} - \\frac{d^2 r(x,t)}{dz^2} =q  \\\\\n",
+    " &u(.,0) = 0 \\\\\n",
+    " &\\frac{d u(x,t)}{dt}|_{t=0} = 0 \n",
+    "\\end{cases}\n",
+    "\n",
+    "with the zero initial conditons to guaranty unicity of the solution\n",
+    "\n",
+    "It correspondto a velocity model where the velocity in the z direction is different from the velocity in the xy plane\n",
+    "\n",
+    "##  Adjoint\n",
+    "The VTI adjoint wave equation for the square slowness m, thomsen parametersd $\\epsilon$ and $\\delta$ for 3D  and a source q is given in 3D by :\n",
+    "\n",
+    "\\begin{cases} \n",
+    " &m \\frac{d^2 p(x,t)}{dt^2} - \\frac{d^2 ((1+2\\epsilon)p(x,t))}{dx^2} -  \\frac{d^2 \\sqrt{(1+2\\delta)} r(x,t)}{dz^2} =q  \\\\\n",
+    " &m \\frac{d^2 r(x,t)}{dt^2} - \\frac{d^2 \\sqrt{(1+2\\delta)}p(x,t)}{dx^2} - \\frac{d^2 r(x,t)}{dz^2} =q  \\\\\n",
+    " &u(.,T) = 0 \\\\\n",
+    " &\\frac{d u(x,t)}{dt}|_{t=T} = 0 \n",
+    "\\end{cases}\n",
+    "\n",
+    "with the zero initial conditons to guaranty unicity of the solution\n",
+    "\n",
     "It correspondto a velocity model where the velocity in the z direction is different from the velocity in the xy plane"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'UndefinedFunction' and 'UndefinedFunction'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-e263bb631bf0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mE\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mAp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[0mBp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mB\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mBr\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mB\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'UndefinedFunction' and 'UndefinedFunction'"
+     ]
+    }
+   ],
    "source": [
     "p=Function('p')\n",
     "r=Function('r')\n",
+    "\n",
     "m,s,h = symbols('m s h')\n",
     "m=M(x,y)\n",
     "q=Q(x,y,t)\n",
     "d=D(x,y,t)\n",
     "e=E(x,y)\n",
     "\n",
-    "A=epsilon(x,y)\n",
-    "B=delta(x,y)"
+    "Ap=A*p\n",
+    "Bp=B*p\n",
+    "Br=B*r"
    ]
   },
   {
@@ -103,25 +168,6 @@
     "stencilr = solve(waver,r(x,y,t+s))[0]\n",
     "stencilr\n",
     "tsr=lambdify((r(x,y,t-s),p(x-h,y,t), p(x,y,t), p(x+h,y,t), r(x,y,t),r(x,y-h,t), r(x,y+h,t), q , m, s, h,A,B,e),stencilr,\"numpy\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## PDE Adjoint\n",
-    "The VTI adjoint wave equation for the square slowness m, thomsen parametersd $\\epsilon$ and $\\delta$ for 3D  and a source q is given in 3D by :\n",
-    "\n",
-    "\\begin{cases} \n",
-    " &m \\frac{d^2 p(x,t)}{dt^2} - (\\frac{d^2 ((1+2\\epsilon)p(x,t))}{dx^2}+ \\frac{d^2 ((1+2\\epsilon)p(x,t))}{dy^2}) -  \\frac{d^2 \\sqrt{(1+2\\delta)} r(x,t)}{dz^2} =q  \\\\\n",
-    " &m \\frac{d^2 r(x,t)}{dt^2} - (\\frac{d^2 \\sqrt{(1+2\\delta)}p(x,t)}{dx^2}+ \\frac{d^2 \\sqrt{(1+2\\delta)}p(x,t)}{dy^2}) - \\frac{d^2 r(x,t)}{dz^2} =q  \\\\\n",
-    " &u(.,T) = 0 \\\\\n",
-    " &\\frac{d u(x,t)}{dt}|_{t=T} = 0 \n",
-    "\\end{cases}\n",
-    "\n",
-    "with the zero initial conditons to guaranty unicity of the solution\n",
-    "\n",
-    "It correspondto a velocity model where the velocity in the z direction is different from the velocity in the xy plane"
    ]
   },
   {
