--- a/AcousticFWI/TTI.ipynb
+++ b/AcousticFWI/TTI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -106,6 +106,47 @@
     "G_{\\bar{x}\\bar{x}} & = cos(\\theta)^2 \\frac{d^2}{dx^2} + sin(\\theta)^2 \\frac{d^2}{dz^2} - sin(2\\theta) \\frac{d^2}{dx dz} \\\\\n",
     "G_{\\bar{z}\\bar{z}} & =  sin(\\theta)^2 \\frac{d^2}{dx^2} + cos(\\theta)^2 \\frac{d^2}{dz^2} +sin(2\\theta) \\frac{d^2}{dx dz} \\\\ \n",
     "\\end{cases}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "p=Function('p')\n",
+    "r=Function('r')\n",
+    "m,s,h = symbols('m s h')\n",
+    "m=M(z,x)\n",
+    "q=Q(z,x,t)\n",
+    "d=D(z,x,t)\n",
+    "e=E(z,x)\n",
+    "\n",
+    "A=epsilon(z,x)\n",
+    "B=delta(z,x)\n",
+    "Th=theta(z,x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dttp=as_finite_diff(p(z,x,t).diff(t,t), [t-s,t, t+s])\n",
+    "dttr=as_finite_diff(r(z,x,t).diff(t,t), [t-s,t, t+s])\n",
+    "dtp=as_finite_diff(p(z,x,t).diff(t), [t-s,t])\n",
+    "dtr=as_finite_diff(r(z,x,t).diff(t), [t-s,t])\n",
+    "# Spacial finite differences can easily be extended to higher order by increasing the list of sampling point in the next expression. \n",
+    "# Be sure to keep this stencil symmetric and everything else in the notebook will follow.\n",
+    "dxxp=as_finite_diff(p(z,x,t).diff(x,x), [x-h,x, x+h]) \n",
+    "dzzp=as_finite_diff(p(z,x,t).diff(z,z), [z-h,z, z+h])\n",
+    "dxxr=as_finite_diff(r(z,x,t).diff(x,x), [x-h,x, x+h]) \n",
+    "dzzr=as_finite_diff(r(z,x,t).diff(z,z), [z-h,z, z+h])"
    ]
   },
   {
